--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,9 @@
 
     <h1><%= @article.title %></h1>
     <p><%= @article.body %></p>
+
+    <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}, class: "btn btn-danger" %>
+    <%= link_to "edit", edit_article_path(@article), class: "btn btn-warning" %>
     <hr>
     <%= link_to "<<Back to Articles List", articles_path, class: "btn btn-info" %>
 
