--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,17 @@
 <div class="row">
   <div class="container">
 
-    <h1><%= @article.title %></h1>
+    <h2><%= @article.title %></h2>
     <p><%= @article.body %></p>
 
     <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}, class: "btn btn-danger" %>
     <%= link_to "edit", edit_article_path(@article), class: "btn btn-warning" %>
+    <hr>
+
+    <h3>Comments</h3>
+    <%= render partial: 'articles/comment', collection: @article.comments.reverse %>
+    <hr>
+    <%= render partial: 'comments/form' %>
     <hr>
     <%= link_to "<<Back to Articles List", articles_path, class: "btn btn-info" %>
 
