--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Blog</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Blog</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <div class="flash small text-center"><%= flash.notice %></div>
+<body>
+  <div class="row">
+    <div class="container-fluid">
+      <nav class="navbar navbar-inverse">
+        <div class="container">
+          <div class="navbar-header">
+            <%= link_to 'Blog', root_path, class: 'navbar-brand' %>
+          </div>
+          <div id="navbar">
+            <ul class="nav navbar-nav">
+              <li><%= link_to 'Home', root_path %></li>
+            </ul>
+            <ul class="nav navbar-nav pull-right">
+              <% if user_signed_in? %>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                  <%= current_user.name %>
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to 'Profile', edit_user_registration_path %></li>
+                  <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+                </ul>
+              </li>
+              <% else %>
+              <li><%= link_to 'Log In', new_user_session_path %></li>
+              <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <% if notice %>
+      <p class="alert alert-success fade in small text-center"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+      <p class="alert alert-danger fade insmall text-center"><%= alert %></p>
+      <% end %>
+      <%= yield :top_content %>
+      <div class="container">
+        <h1><%= yield :header %></h1>
+      </div>
+    </div>
 
-    <% if notice %>
-      <p class="alert alert-success small text-center"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger small text-center"><%= alert %></p>
-    <% end %>
-
-    <%= yield %>
-  </body>
+    <div class="container">
+      <%= yield %>
+    </div>
+  </div>
+</body>
 </html>
